fix: Ensure active nav links are properly styled in dark mode

--- a/assets/scss/_dark_mode.scss
+++ b/assets/scss/_dark_mode.scss
@@ -38,10 +38,6 @@ $text-color: bootstrap.$gray-400;
         border-bottom-color: rgba(255, 255, 255, 0.1);
         background: bootstrap.$gray-800;
 
-        .nav-link {
-            color: bootstrap.$gray-400;
-        }
-
         .btn {
             color: $text-color;
             border-color: rgba(255, 255, 255, 0.1);
